# prompt-refiner-anatomy

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
examples/: demo_ps.ps1
generated_prompts/: brain_3d.json  brain_standard.json  heart_3d.json  heart_standard.json  liver_3d.json  liver_standard.json  lungs_3d.json  lungs_standard.json  skeleton_3d.json  skeleton_standard.json
prompt_refiner_anatomy/: __init__.py  __main__.py  enhancer.py  filters.py
prompt_refiner_anatomy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompt_refiner_anatomy/data/: anatomical_terms.json
prompt_refiner_anatomy/integration/: __init__.py  colab_utils.py  diffusers_hook.py
tests/: test_enhancer.py
